--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # AWS
-aws.access.key.id=AKIA3LYO3Q6MVZAEFVYD
-aws.secret.access.key=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
+aws.access.key.id=
+aws.secret.access.key=
 aws.s3.region=us-east-2
 aws.s3.bucket.name=cloud-fuji
 
